footer out of place-bug fix

--- a/src/components/NavigationMenu/styles.module.scss
+++ b/src/components/NavigationMenu/styles.module.scss
@@ -7,6 +7,7 @@
 
     width: 100vw;
     height: 100vh;
+    overflow-y: auto;
 
     background-color: $white;
 
@@ -44,7 +45,6 @@
     background-color: $gray;
     border: none;
     border-radius: 0.5rem;
-    box-shadow: 0 0 28px 1px #000;
-    box-shadow: 0 0 28px 1px #000;
+    box-shadow: 0 0 28px 1px $black;
     cursor: pointer;
 }
